package fit.smart.smartfitapi.entity;

import jakarta.persistence.*;
import lombok.*;
import java.time.LocalDate;
import java.util.ArrayList;
import java.util.List;

@Entity
@Table(name = "program_weeks")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class ProgramWeek {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(nullable = false)
    private Integer weekNumber;

    @Column(nullable = false)
    private LocalDate startDate;

    @Builder.Default
    private Boolean isCustomized = false;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "training_program_id", nullable = false)
    private TrainingProgram trainingProgram;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "weekly_template_id")
    private WeeklyTemplate weeklyTemplate;

    @Getter
    @OneToMany(mappedBy = "programWeek", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
    @Builder.Default
    private List<Session> sessions = new ArrayList<>();

    public void resetToTemplate() {
        if (weeklyTemplate != null) {
            this.isCustomized = false;
        }
    }

    public void setCustomized(Boolean customized) {
        isCustomized = customized;
    }


}
